# cakrul_cv

./: .gitignore  docker-compose.yml  package-lock.json  pyproject.toml  todo.db
backend/: .gitignore  Dockerfile  database.py  main.py  models.py  pyproject.toml
backend/repositories/: certificate_repo.py  education_repo.py  experience_repo.py  interest_repo.py  language_repo.py  skill_category_repo.py  skill_repo.py
backend/routers/: authentication.py  certificate_router.py  education_router.py  experience_router.py  interest_router.py  language_router.py  skill_category_router.py  skill_router.py
backend/schemas/: __init__.py  certificate.py  education.py  experience.py  interest.py  language.py  skill.py  skill_category.py  task.py  user.py
frontend/: Dockerfile  index.html  package-lock.json  vite.config.js
frontend/public/: ads.txt
frontend/src/: App.vue  axios.js  router.js
frontend/src/assets/css/: live-resume.css
frontend/src/assets/scss/partialas/: _aside.scss  _header.scss  _layout.scss
frontend/src/components/layout/: TheFooter.vue  TheHeader.vue
frontend/src/pages/: TheCV.vue  TheHome.vue  TheLogout.vue  TheTasks.vue
frontend/src/store/: taskStore.js
