[tool.poetry]
name = "backend"
version = "0.1.0"
description = "CV For Asrul Sani Ariesandy"
authors = ["Asrul Sani Ariesandy <asrulsibaoel@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.10.12"
fastapi = "0.110.0"
uvicorn = "0.27.1"
sqlalchemy = {extras = ["asyncio"], version = "2.0.28"}
pydantic = "2.6.3"
pydantic-settings = "2.2.1"
aiosqlite = "0.20.0"
passlib = "1.7.4"
python-multipart = "0.0.9"
bcrypt = "4.0.1"
ruff = "0.3.2"
pyjwt = "2.8.0"
gunicorn = "21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["W", "E", "I", "TCH", "A", "COM", "S"]
ignore = ["COM812"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
skip-magic-trailing-comma = false